lets-encrypt/wp-ingress-with-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
   # ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - wp.mysite.com
    secretName: wordpress-tls
  rules:
    - host: wp.mysite.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: wordpress
              servicePort: 80
